--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "micro check library",
   "main": "dist/is.esm.js",
   "scripts": {
-    "clean": "rimraf dist",
     "preinstall": "npx only-allow yarn",
     "prepare": "npx husky install",
     "lint": "eslint --ext .js,jsx,.ts,.tsx ./ --max-warnings 0 --cache --cache-location node_modules/.cache/eslint/ --fix",
     "format": "prettier --write .",
-    "build": "npm run clean && rollup -c rollup.config.mjs",
+    "build": "rimraf dist && rollup -c rollup.config.mjs",
     "commit": "git add -A && git cz && git push"
   },
   "keywords": [
@@ -26,23 +25,23 @@
     "hooks": {
       "pre-commit": "lint-staged",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    },
-    "lint-staged": {
-      "*.{js,ts,jsx,tsx}": [
-        "prettier --write",
-        "eslint --fix"
-      ],
-      "*.{json}": [
-        "prettier --write"
-      ],
-      "*.md": [
-        "prettier --write"
-      ]
-    },
-    "config": {
-      "commitizen": {
-        "path": "node_modules/cz-git"
-      }
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts,jsx,tsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.{json}": [
+      "prettier --write"
+    ],
+    "*.md": [
+      "prettier --write"
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-git"
     }
   },
   "devDependencies": {
@@ -65,7 +64,6 @@
     "lint-staged": "^13.2.3",
     "only-allow": "^1.1.1",
     "prettier": "^3.0.1",
-    "pretty-quick": "^3.1.3",
     "rollup": "^3.27.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-filesize": "^10.0.0",
