build: 🛠 lint-staged修改匹配json文件

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
       "prettier --write",
       "eslint --fix"
     ],
-    "*.{json}": [
+    "*.json": [
       "prettier --write"
     ],
     "*.md": [
