--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "rollup-plugin-filesize": "^10.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "standard-version": "^9.5.0",
+    "tslib": "^2.6.1",
     "typescript": "^5.1.6"
   },
   "peerDependencies": {
