--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "baseUrl": ".", // 工作根目录
     "experimentalDecorators": true, // 启用实验性的ES装饰器
     "jsx": "react", // 在 .tsx文件里支持JSX
-    "sourceMap": true, // 是否生成map文件
+    "sourceMap": false, // 是否生成map文件
     "module": "ESNext", // 指定生成哪个模块系统代码
     "noImplicitAny": false, // 是否默认禁用 any
     "removeComments": true, // 是否移除注释
