--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "allowSyntheticDefaultImports": true,
     "lib": [
       // 编译过程中需要引入的库文件的列表
-      "ESNext"
+      "ESNext",
+      "dom"
     ]
   },
   // 指定一个匹配列表（属于自动指定该路径下的所有ts相关文件）
