--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint --ext .js,jsx,.ts,.tsx ./ --max-warnings 0 --cache --cache-location node_modules/.cache/eslint/ --fix",
     "format": "prettier --write .",
     "build": "rimraf dist && rollup -c rollup.config.mjs",
-    "commit": "git add -A && git cz && git push"
+    "commit": "git add -A && git cz && git push",
+    "test": "jest"
   },
   "keywords": [
     "is",
@@ -52,6 +53,7 @@
     "@commitlint/config-conventional": "^17.6.7",
     "@rollup/plugin-commonjs": "^25.0.3",
     "@rollup/plugin-typescript": "^11.1.2",
+    "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
     "commitizen": "^4.3.0",
@@ -61,6 +63,8 @@
     "eslint-config-alloy": "^5.1.0",
     "glob": "^10.3.3",
     "husky": "^8.0.3",
+    "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
     "lint-staged": "^13.2.3",
     "only-allow": "^1.1.1",
     "prettier": "^3.0.1",
@@ -69,6 +73,7 @@
     "rollup-plugin-filesize": "^10.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "standard-version": "^9.5.0",
+    "ts-jest": "^29.1.1",
     "tslib": "^2.6.1",
     "typescript": "^5.1.6"
   },
@@ -89,5 +94,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "@babel/preset-typescript": "^7.22.5"
   }
 }
