--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "format": "prettier --write .",
     "build": "rimraf dist && rollup -c rollup.config.mjs",
     "commit": "git add -A && git cz && git push",
-    "test": "jest"
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [
     "is",
@@ -52,7 +54,8 @@
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.6.7",
     "@rollup/plugin-commonjs": "^25.0.3",
-    "babel-jest": "^29.6.2",
+    "@vitest/coverage-istanbul": "^0.34.1",
+    "@vitest/ui": "^0.34.1",
     "commitizen": "^4.3.0",
     "core-js": "^3.32.0",
     "cz-git": "^1.7.0",
@@ -60,8 +63,7 @@
     "eslint-config-alloy": "^5.1.0",
     "glob": "^10.3.3",
     "husky": "^8.0.3",
-    "jest": "^29.6.2",
-    "jest-environment-jsdom": "^29.6.2",
+    "jsdom": "^22.1.0",
     "lint-staged": "^13.2.3",
     "only-allow": "^1.1.1",
     "prettier": "^3.0.1",
@@ -69,7 +71,8 @@
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-filesize": "^10.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "standard-version": "^9.5.0"
+    "standard-version": "^9.5.0",
+    "vitest": "^0.34.1"
   },
   "peerDependencies": {
     "core-js": "^3.32.0"
