--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "commit": "git add -A && git cz && git push",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "keywords": [
     "is",
@@ -72,6 +75,7 @@
     "rollup-plugin-filesize": "^10.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "standard-version": "^9.5.0",
+    "vitepress": "^1.0.0-rc.4",
     "vitest": "^0.34.1"
   },
   "peerDependencies": {
