--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "micro check library",
   "main": "dist/is.esm.js",
   "scripts": {
-    "preinstall": "npx only-allow yarn",
+    "preinstall": "npx only-allow pnpm",
     "prepare": "npx husky install",
     "lint": "eslint --ext .js,.mjs,.cjs ./ --max-warnings 0 --cache --cache-location node_modules/.cache/eslint/ --fix",
     "format": "prettier --write .",
@@ -67,10 +67,10 @@
     "glob": "^10.3.5",
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
-    "lint-staged": "^14.0.1",
+    "lint-staged": "^15.0.2",
     "only-allow": "^1.1.1",
     "prettier": "^3.0.3",
-    "rollup": "^3.29.2",
+    "rollup": "^4.1.4",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-filesize": "^10.0.0",
     "rollup-plugin-terser": "^7.0.2",
