--- a/package.json
+++ b/package.json
@@ -51,32 +51,32 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "^7.22.20",
+    "@babel/core": "^7.23.2",
     "@babel/eslint-parser": "^7.22.15",
-    "@babel/preset-env": "^7.22.20",
-    "@commitlint/cli": "^17.7.1",
-    "@commitlint/config-conventional": "^17.7.0",
-    "@rollup/plugin-commonjs": "^25.0.4",
-    "@vitest/coverage-istanbul": "^0.34.5",
-    "@vitest/ui": "^0.34.5",
+    "@babel/preset-env": "^7.23.2",
+    "@commitlint/cli": "^17.8.1",
+    "@commitlint/config-conventional": "^17.8.1",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@vitest/coverage-istanbul": "^0.34.6",
+    "@vitest/ui": "^0.34.6",
     "commitizen": "^4.3.0",
-    "core-js": "^3.32.2",
+    "core-js": "^3.33.1",
     "cz-git": "^1.7.1",
-    "eslint": "^8.49.0",
+    "eslint": "^8.52.0",
     "eslint-config-alloy": "^5.1.2",
-    "glob": "^10.3.5",
+    "glob": "^10.3.10",
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
     "lint-staged": "^15.0.2",
-    "only-allow": "^1.1.1",
+    "only-allow": "^1.2.1",
     "prettier": "^3.0.3",
     "rollup": "^4.1.4",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-filesize": "^10.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "standard-version": "^9.5.0",
-    "vitepress": "^1.0.0-rc.4",
-    "vitest": "^0.34.5"
+    "vitepress": "1.0.0-rc.24",
+    "vitest": "^0.34.6"
   },
   "peerDependencies": {
     "core-js": "^3.32.0"
